threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/thread_reset/test000008.exec.err
Error: external call with symbolic argument: _txm_module_manager_inside_data_check
File: threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h
Line: 2461
assembly.ll line: 17153
State: 4
Stack: 
	#000017153 in _txm_module_manager_tx_thread_reset_dispatch(module_instance=symbolic, param_0=symbolic) at threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h:2461
	#100007460 in _txm_module_manager_kernel_dispatch(kernel_request=65, param_0=symbolic, param_1=0, param_2=0) at threadx/threadx/common_modules/module_manager/src/txm_module_manager_kernel_dispatch.c:631
	#200000239 in m_txe_thread_reset(thread_ptr=symbolic) at threadx/threadx/common_modules/module_lib/src/txm_thread_reset.c:74
	#300000209 in main() at evaluation_files/thread_reset.c:72
